# Studienarbeit_Kommunikation

./: .mxproject  CMakeLists.txt  CubeMX.ioc  my_toolchain.cmake
Core/Inc/: main.h  stm32g4xx_hal_conf.h
Core/Src/: gpio.c  main.c  usart.c
Drivers/Modbus/: modbus_rtu.c  modbus_rtu.h  modbus_test.c
cmake/stm32cubemx/: CMakeLists.txt
